# CV_engineer

./: CMakeLists.txt  Manual.markdown  Manual.md  README.md  main.cpp
1_CV_programming/: CMakeLists.txt  Manual.md  README.md  main.cpp
1_CV_programming/preprocessing/: convert_hdf_to_jpeg.py  info.txt  metadata.txt  readme.md
2_System_design/: Manual.markdown  Manual.md  README.md  image_matching_manual.markdown  image_matching_system.py
2_System_design/preprocessing/: preprocess_image.py  readme.md
2_System_design/preprocessing/lat_lon_conv/: README.md  convert_latlon_to_normalized.py
